docs/api/qiskit-ibm-runtime/0.39/options-environment-options.mdx
---
title: EnvironmentOptions (v0.39)
description: API reference for qiskit_ibm_runtime.options.EnvironmentOptions in qiskit-ibm-runtime v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.EnvironmentOptions
---

# EnvironmentOptions

<Class id="qiskit_ibm_runtime.options.EnvironmentOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.39/qiskit_ibm_runtime/options/environment_options.py#L28-L63" signature="EnvironmentOptions(log_level='WARNING', callback=None, job_tags=None, private=False)" modifiers="class">
  Bases: `object`

  Options related to the execution environment.

  ## Attributes

  **Parameters**

  *   **log\_level** (*Literal\['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL']*)
  *   **callback** (*Callable | None*)
  *   **job\_tags** (*List | None*)
  *   **private** (*bool | None*)

  ### callback

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.callback" attributeTypeHint="Callable | None" attributeValue="None">
    (DEPRECATED) Callback function to be invoked for any interim results and final result. The callback function will receive 2 positional parameters:

    > 1.  Job ID
    > 2.  Job result.

    Default: `None`.
  </Attribute>

  ### job\_tags

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.job_tags" attributeTypeHint="List | None" attributeValue="None">
    Tags to be assigned to the job. The tags can subsequently be used as a filter in the `qiskit_ibm_runtime.qiskit_runtime_service.jobs()` function call.

    Default: `None`.
  </Attribute>

  ### log\_level

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.log_level" attributeTypeHint="Literal['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL']" attributeValue="'WARNING'">
    logging level to set in the execution environment. The valid log levels are: `DEBUG`, `INFO`, `WARNING`, `ERROR`, and `CRITICAL`.

    Default: `WARNING`.
  </Attribute>

  ### private

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.private" attributeTypeHint="bool | None" attributeValue="False">
    Boolean that indicates whether the job is marked as private. This is only supported for `ibm_quantum` channel. When set to true, input parameters are not returned, and the results can only be read once. After the results are read or after a specified time after the job is completed, the results are deleted from the service. When set to false, the input parameters and results follow the standard retention behavior.

    Default: False.
  </Attribute>

  ## Methods
</Class>

